# msi_support_assistant

./: .env.example  .gitignore  COMMIT.md  PROTOTYPE_SUMMARY.md  Procfile  README.md  REFACTORING_SUMMARY.md  REORGANIZATION_ANALYSIS.md  main.py  pyproject.toml  pytest.ini
.github/: CI_CD_SETUP.md
.github/instructions/: copilot-instructions.md
.github/workflows/: angular-ci.yml  python-ci.yml
ai-assistant-ui/: angular.json  package-lock.json
chroma_langchain_db/: chroma.sqlite3
data/: curated_urls.md  motorola_docs.json  motorola_docs_small.json  motorola_documents.json  prototype_documents.json  prototype_documents_demo.json  site_recommendation.md
data/databases/: organizations.db  users.db
dev_resources/: COMMIT_TEMPLATE.md
docs/: ANGULAR_UI_GUIDE.md  COMMIT_TEMPLATE.md  COPILOT_MCP_SETUP.md  GETTING_STARTED.md  OBSERVABILITY.md  PORT_CONFIG.md  PRODUCTION_IMPROVEMENTS.md  RATE_LIMITING_GUIDE.md  REFACTORING_SUMMARY.md  REORGANIZATION_PLAN.md  SSO_IMPLEMENTATION.md  TESTING_QUICK_REF.md  fastmcp-changelog.txt  llm-friendly-docs.md  uv_commands.txt
docs/diagrams/: 01-system-overview.md  02-directory-structure.md  03-authentication-flow.md  04-rag-architecture.md  05-mcp-integration.md  README.md  (+2 more)
documents/: video_manager_admin_guide.txt  video_manager_admin_guide_user.txt
motorola_docs_index_prototype/: chroma.sqlite3
python_docs_index_prototype/: chroma.sqlite3
scripts/: start.bat  stop.bat
src/: agent_setup.py  api_server.py  auth_utils.py  main.py  mock_idp.py  motorola_crawler.py  organizations_mcp.py  prototype_crawler.py  prototype_indexer.py  rag_agent.py  rag_agents.py  ticket.db  ticketing_mcp.py
tests/: 01_base_code.txt  02_mcp_server_integration.txt  __init__.py  test_pii_scrubber.py
(+36 files in other folders)
