[project]
name = "msi-support-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.7.4",
    "python-dotenv>=1.2.1",
    "certifi>=2025.11.12",
    "langchain-chroma>=1.0.0",
]
